--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div>
         <section id="hero" class="d-flex flex-column justify-content-center align-items-left">
             <div class="hero-container" data-aos="fade-in">
-                <h1>Agnes Muita Is A 
+                <h1>Hi, I am Muita The
                     <span class="text-type" data-wait="3000" data-words='["Web-developer","Data-Scientist", "Creator"]'></span>
                 </h1>
             </div> 
@@ -66,7 +66,7 @@
         <div class="row"> 
             <div class="col-md-6">
                     <h1>About</h1>
-                    <p> Muita is a self-taught developer and data science enthusiast. I have gained my skills through online courses, bootcamps,youtube, and discipline.</p>
+                    <p> Agnes Muita is a self-taught developer and data science enthusiast. I have gained my skills through online courses, bootcamps,youtube, and discipline.</p>
                     <p>My goal is to create websites for individuals and organisations using clean and reusable code. I aim to widen my skills to create websites, applications, and games using Javascript, Python, and Java.</p>
                     Below are some of the projects i have completed.
                     <p><a href="https://github.com/AgnesMuita"> Link to Github</a></p>
