--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 <body>
     <div id="container-fluid">
         <div class="topbar">
-            <a href="#contacts">Contact and Links</a>
+            <a href="#contacts">Contacts</a>
+            <a href="#socialmedia">Social Media</a>
             <a href="#portfolios">Portfolio</a>
             <a class="active" href="#Home">Home</a>
             <a href="#about">About</a>
-            <div class="social-links">
-                <a href="" target="blank" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                <a href="" target="blank" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <div class="social-links" id="socialmedia">
+                <a href="https://twitter.com/Aggie_Af" target="blank" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://github.com/AgnesMuita" target="blank" class="Github"><i class="fa fa-github" aria-hidden="true"></i>
+                </a>
                 <a href="" target="blank" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                <a href="" target="blank" class="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/agnes-muita-0b30a3a2/" target="blank" class="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </div>
         <div>
         <section id="hero" class="d-flex flex-column justify-content-center align-items-left">
@@ -69,7 +71,7 @@
                     <p> Agnes Muita is a self-taught developer and data science enthusiast. I have gained my skills through online courses, bootcamps,youtube, and discipline.</p>
                     <p>My goal is to create websites for individuals and organisations using clean and reusable code. I aim to widen my skills to create websites, applications, and games using Javascript, Python, and Java.</p>
                     Below are some of the projects i have completed.
-                    <p><a href="https://github.com/AgnesMuita"> Link to Github</a></p>
+                    <p><a href="https://github.com/AgnesMuita" target="blank"> Link to Github</a></p>
                 </div>
             </div>
        
@@ -77,19 +79,19 @@
             <h2>Portfolio</h2>
             <div class="rows" id="portfolio">
                 <div class="col-md-4" id="work1">
-                    <a href="https://agnesmuita.github.io/Week-Three-IP/">
+                    <a href="https://agnesmuita.github.io/Week-Three-IP/" target="blank">
                         <img src="images/Portfolio1.jpg" alt="work1" class="venobox" >
                     </a>
                     <p id="overlay1"class="texts">Website Recreation</p>
                 </div>
                 <div class="col-md-4" id="work2">
-                    <a href="https://agnesmuita.github.io/Pizza-Order-and-Delivery/">
+                    <a href="https://agnesmuita.github.io/Pizza-Order-and-Delivery/"target="blank">
                         <img src="images/Portfolio2.jpg" alt="work2" id="work2">
                     </a>
                     <p id="overlay2" class="texts">Pizza Ordering App</p>
                 </div>
                 <div class="col-md-4" id="work3">
-                    <a href="https://github.com/AgnesMuita/Birthdays-WebApplication">
+                    <a href="https://github.com/AgnesMuita/Birthdays-WebApplication"target="blank">
                         <img src="images/Portfolio3.jpg" alt="work3">
                     </a>
                     <p id="overlay3"class="texts">Name Generator</p>
